--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "devtools socket chat",
   "main": "server",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "node server"
   },
   "repository": {
     "type": "git",
